# xcube-multistore

./: .gitignore  404.html  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  gathered_requirements.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: unittest-workflow.yml
about/: index.html
api/: index.html
config/: index.html
docs/: about.md  api.md  config.md  index.md  start.md
examples/: config.yml  example_notebook.ipynb  example_script.py  modify_dataset.py
ms_datastore/: config.py  constants.py  grid_mappings.py  ms_datastore.py  visualisation.py
search/: search_index.json
start/: index.html
test/: __init__.py  sample_data.py  test_config.py  test_multistore.py  test_stores.py  test_utils.py  test_visualization.py
xcube_multistore/: __init__.py  config.py  constants.py  gridmappings.py  multistore.py  stores.py  utils.py  version.py  visualization.py
